2008-01-09  Gary Burton <gary.burton@zen.co.uk>
	* src/DisplayModels/_BaseModel.py: add self.db to match function

2008-01-09  Gary Burton <gary.burton@zen.co.uk>
	* src/DataViews/__init__.py: remove message regarding malformed dataviews

2008-01-09 Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/gen/utils/callback.py
    * src/ObjectSelector/_FamilyFilterFrame.py
    * src/test/test/test_util_test.py
    * src/test/test/gedread_util_test.py
    * src/test/test_util.py
    * src/test/gramps_cli_test.py
    * src/test/ansel_utf8_test.py
    * src/GrampsDbUtils/test/_GedcomChar_test.py
    * src/GrampsDbUtils/test/_GrampsDbWRFactories_test.py
    * src/GrampsDbUtils/test/GR_test.py
    From PEP8 Always use 'self' for the first argument to instance methods.

2008-01-09 Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/plugins/ExportVCard.py: in write_person use b_date instead of date
    0001497: small typo and imports cleanup in ExportVCard.py

2008-01-09  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/GrampsDbUtils/_GrampsBSDDB.py: wrong const import

2008-01-09  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/ObjectSelector/_FilterFrameBase.py: indentation and tabs/spaces fix

2008-01-09  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/ViewManager.py: delete unneded method import_pkg
	* src/ArgHandler.py: fix import CompressionError instead of CompressError 
	* src/gen/proxy/filter.py: fix not needed family= line

2008-01-08  Brian Matherly <brian@gramps-project.org>
	* src/PluginUtils/_MenuOptions.py:
	Fix 0001539: Tab order incorrect - Statistics Chart configuration

2008-01-08  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_GraphvizReportDialog.py:
	Fix 0001515: GraphViz reports don't register page margins on 
	report_options.xml

2008-01-08  Brian Matherly <brian@gramps-project.org>
	* src/plugins/AncestorChart.py:
	* src/plugins/DescendChart.py: 
	Fix 0001228: Descendent Chart doesn't respect the margin
